--- a/web/HackAPI/HackAPI/HackAPI.csproj
+++ b/web/HackAPI/HackAPI/HackAPI.csproj
@@ -196,9 +196,9 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
-    <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\LoginController.cs" />
+    <Compile Include="Controllers\CardController.cs" />
+    <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -213,6 +213,8 @@
     <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\Cadastro.cs" />
     <Compile Include="Models\CadastroService.cs" />
+    <Compile Include="Models\Cartao.cs" />
+    <Compile Include="Models\CartaoService.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
