--- a/web/HackAPI/ConsoleApplication1/ConsoleApplication1.csproj
+++ b/web/HackAPI/ConsoleApplication1/ConsoleApplication1.csproj
@@ -34,7 +34,7 @@
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>lib\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="SimplifySDK, Version=1.2.0.0, Culture=neutral, PublicKeyToken=8512cbf25aedd31b, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
