adicao de cartao ok

--- a/web/HackAPI/HackAPI/HackAPI.csproj
+++ b/web/HackAPI/HackAPI/HackAPI.csproj
@@ -40,7 +40,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -212,6 +212,10 @@
     <Compile Include="Migrations\201504111921098_first.Designer.cs">
       <DependentUpon>201504111921098_first.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201504112123289_cart.cs" />
+    <Compile Include="Migrations\201504112123289_cart.Designer.cs">
+      <DependentUpon>201504112123289_cart.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -300,6 +304,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201504111921098_first.resx">
       <DependentUpon>201504111921098_first.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201504112123289_cart.resx">
+      <DependentUpon>201504112123289_cart.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
