--- a/web/HackAPI/HackAPI/Web.config
+++ b/web/HackAPI/HackAPI/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Server=tcp:wtf7u57uzg.database.windows.net,1433;Database=dbhack;User ID=rodolfo@wtf7u57uzg;Password=123Mudar;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Server=tcp:ywfyygm88z.database.windows.net,1433;Database=masteroAfeSRGNUg;User ID=rodolfo@ywfyygm88z;Password=123Mudar;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
