--- a/web/HackAPI/HackAPI/HackAPI.csproj
+++ b/web/HackAPI/HackAPI/HackAPI.csproj
@@ -201,6 +201,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\CheckoutController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\CardController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
@@ -224,15 +225,21 @@
     <Compile Include="Migrations\201504120000207_procuts.Designer.cs">
       <DependentUpon>201504120000207_procuts.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201504120123271_invoice.cs" />
+    <Compile Include="Migrations\201504120123271_invoice.Designer.cs">
+      <DependentUpon>201504120123271_invoice.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\Cadastro.cs" />
     <Compile Include="Models\Cartao.cs" />
+    <Compile Include="Models\Pedido.cs" />
     <Compile Include="Models\Produto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
     <Compile Include="Services\CadastroService.cs" />
     <Compile Include="Services\CartaoService.cs" />
+    <Compile Include="Services\InvoiceService.cs" />
     <Compile Include="Services\ProdutoService.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -326,6 +333,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201504120000207_procuts.resx">
       <DependentUpon>201504120000207_procuts.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201504120123271_invoice.resx">
+      <DependentUpon>201504120123271_invoice.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
